src/test/deca/syntax/invalid/without_class/missing_cbrace.deca
// Description:
//    Program with missing closing brace in main
//
// Result:
//    Syntax  Error
//    line 11


{
    int x = 0;
